--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-186.0KB/s(Youtube:不良林), server: tw2501.cloudmatrix.xyz, port: 2501, type: vmess, uuid: 58bbd816-c5f2-39e2-8ca1-79e87c2c2b02, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: tw2501.cloudmatrix.xyz}}
-  - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: u2.anmu.one, port: 16161, type: vmess, uuid: 919ac815-1776-47fe-8b54-508ef4f39421, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.03MB/s(Youtube:不良林), server: 134.195.196.231, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇬🇧 英国-2.13MB/s(Youtube:不良林), server: 152.89.210.84, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇬🇧 英国-3.05MB/s(Youtube:不良林), server: 152.89.210.84, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
+  - {name: 🇬🇧 英国-3.05MB/s(Youtube:不良林), server: 152.89.210.84, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇺🇸 美国-229.6KB/s(Youtube:不良林), server: 2.tiantang.cf, port: 51119, type: trojan, password: oJjnDA3ycC, sni: 2.tiantang.cf, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-206.4KB/s(Youtube:不良林), server: 152.89.210.105, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇯🇵 日本-5.35MB/s(Youtube:不良林), server: kirakirasevennine.com, port: 443, type: vmess, uuid: 67068812-0f6c-437e-ab13-f480f23bf004, alterId: 13, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /9f21/, ws-headers: {Host: kirakirasevennine.com}}
+  - {name: 🇺🇸 美国-4.33MB/s(Youtube:不良林), server: u2.anmu.one, port: 16161, type: vmess, uuid: 919ac815-1776-47fe-8b54-508ef4f39421, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.51MB/s(Youtube:不良林), server: 152.89.210.105, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
   - {name: 🇬🇧 英国-1.75MB/s(Youtube:不良林), server: 152.89.210.105, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
   - {name: 🇺🇸 美国-582.3KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-186.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.13MB/s(Youtube:不良林)
       - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
