--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-3.05MB/s(Youtube:不良林), server: 152.89.210.84, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
-  - {name: 🇺🇸 美国-229.6KB/s(Youtube:不良林), server: 2.tiantang.cf, port: 51119, type: trojan, password: oJjnDA3ycC, sni: 2.tiantang.cf, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-206.4KB/s(Youtube:不良林), server: 152.89.210.105, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇯🇵 日本-5.35MB/s(Youtube:不良林), server: kirakirasevennine.com, port: 443, type: vmess, uuid: 67068812-0f6c-437e-ab13-f480f23bf004, alterId: 13, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /9f21/, ws-headers: {Host: kirakirasevennine.com}}
-  - {name: 🇺🇸 美国-4.33MB/s(Youtube:不良林), server: u2.anmu.one, port: 16161, type: vmess, uuid: 919ac815-1776-47fe-8b54-508ef4f39421, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.51MB/s(Youtube:不良林), server: 152.89.210.105, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇬🇧 英国-1.75MB/s(Youtube:不良林), server: 152.89.210.105, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇺🇸 美国-582.3KB/s(Youtube:不良林), server: ahdaeph8.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: ahdaeph8.com}}
-  - {name: 🇺🇸 美国-9.35MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.94MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.28MB/s(Youtube:不良林), server: 129.226.216.160, port: 49056, type: vmess, uuid: 89d7f316-c0d4-47f2-c6d3-fd9f37c11c7e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.49MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.73MB/s(Youtube:不良林), server: 129.226.95.143, port: 45381, type: vmess, uuid: cd2a260c-f244-4e12-83c3-8a259cf29fc6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.82MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.27MB/s(Youtube:不良林), server: u2.anmu.one, port: 16161, type: vmess, uuid: 919ac815-1776-47fe-8b54-508ef4f39421, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: fr1t.moonfree.top, port: 8443, type: vmess, uuid: 6e9eeae6c3d1439e9f7a213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: fr1t.moonfree.top}}
+  - {name: 未知国家-2.27MB/s(Youtube:不良林), server: rackedgeuk510.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: rackedgeuk510.moonfree.top}}
+  - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: liumin.cf, port: 443, type: vmess, uuid: 5a6e82d9-7c95-17a0-a503-bca5806bd6f7, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ddrkvideovws, ws-headers: {Host: liumin.cf}}
+  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: kr05.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr05.wangxd.life, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.42MB/s(Youtube:不良林), server: 103.172.116.87, port: 31244, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.35MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.35MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.35MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.35MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.35MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.35MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-229.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-206.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.33MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-582.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.35MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.49MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
+      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
