--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇦 加拿大-3.00MB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇬🇧 英国-2.89MB/s(Youtube:不良林), server: 152.89.210.105, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇺🇸 美国-4.70MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-13.41MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.48MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇬🇧 英国-228.8KB/s(Youtube:不良林), server: 152.89.210.105, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇸🇬 新加坡-2.22MB/s(Youtube:不良林), server: 129.226.216.121, port: 49381, type: vmess, uuid: 2f6d0f82-80c4-42ed-fd46-c76e7cc81de0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-23.05MB/s(Youtube:不良林), server: mshk1.369boy.com, port: 10501, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: mshk1.369boy.com, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.88MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
+  - {name: 🇯🇵 日本-18.36MB/s(Youtube:不良林), server: vpn.16vpn.top, port: 80, type: vmess, uuid: c01a6b53-df1d-44af-98d8-4f557ab1f444, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: vpn.16vpn.top}}
   - {name: 🇺🇸 美国-4.67MB/s(Youtube:不良林), server: 150.230.45.234, port: 17191, type: vmess, uuid: 6db13551-262a-4b81-f46b-f8621ee637c2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: fr1t.moonfree.top, port: 8443, type: vmess, uuid: 6e9eeae6c3d1439e9f7a213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: fr1t.moonfree.top}}
-  - {name: 未知国家-2.27MB/s(Youtube:不良林), server: rackedgeuk510.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: rackedgeuk510.moonfree.top}}
+  - {name: 🇺🇸 美国-2.10MB/s(Youtube:不良林), server: fr1t.moonfree.top, port: 8443, type: vmess, uuid: 6e9eeae6c3d1439e9f7a213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: fr1t.moonfree.top}}
   - {name: 🇺🇸 美国-2.93MB/s(Youtube:不良林), server: liumin.cf, port: 443, type: vmess, uuid: 5a6e82d9-7c95-17a0-a503-bca5806bd6f7, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ddrkvideovws, ws-headers: {Host: liumin.cf}}
   - {name: 🇸🇬 新加坡-2.42MB/s(Youtube:不良林), server: 103.172.116.87, port: 31244, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,35 +52,36 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-13.41MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -88,14 +89,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -104,14 +105,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -129,14 +130,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.36MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.00MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
+      - 🇬🇧 英国-228.8KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.22MB/s(Youtube:不良林)
+      - 🇭🇰 香港-23.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-18.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 未知国家-2.27MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.10MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.93MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.42MB/s(Youtube:不良林)
 rules:
